# fashion-multimodal-rag

./: .gitignore  README.md  app.py  ingest.py  main.py  pyproject.toml  requirements.txt  template.py
src/config/: settings.py
src/data_loader/: local_dataset_adapter.py
src/models/: embeddings.py  llm_service.py  vector_store.py
src/pipeline/: rag_chain.py
src/utils/: image_utils.py  response_formatter.py
